# dynamic_models

./: CMakeLists.txt  README.md  infographic.html  infographic_RK4.html  infographic_rk4_v2.html
docs/: drone_hover_walkthrough.md  dynamics_analysis_guide.md  examples.md  forces_and_energies.md  free_body_diagrams.md  integration_intuition.md  intuitive_analysis_flow.md  linear_models.md  numerical_methods.md  state_space_primer.md  tests_overview.md
examples/double_pendulum/: main.c
examples/drone/: example_physics_model.c
examples/inverted_pendulum/: main.c
examples/point_mass/: main.c
examples/spring_pendulum/: main.c
include/drone/: physics_model.h
include/linear_models/: double_pendulum_linear.h  inverted_pendulum_linear.h  mass_spring_linear.h  pendulum_linear.h  point_mass_linear.h  spring_pendulum_linear.h
include/utilities/: memory_arena.h  numerical_solvers.h
src/drone/: physics_model.c
src/linear/: double_pendulum_linear.c  inverted_pendulum_linear.c  mass_spring_linear.c  pendulum_linear.c  point_mass_linear.c  spring_pendulum_linear.c
src/utilities/: README.md  numerical_solver.c
tests/: CMakeLists.txt  README.md
tests/battery/: test_battery_management.c  test_battery_model.c
tests/drone/: test_neural_state_space.c  test_physics_model.c
tests/linear/: test_double_pendulum_linear.c  test_inverted_pendulum_linear.c  test_mass_spring_linear.c  test_pendulum_linear.c  test_point_mass_linear.c  test_spring_pendulum_linear.c
tests/motor/: test_motor_dynamics.c
tests/utilities/: test_numerical_solvers.c
